# django_cityloc_pkg_sujinhd

./: LICENSE.txt  README.rst  setup.cfg  setup.py
.github/workflows/: pkg_release.yaml  publish_pkg.yaml
docs/: conf.py  index.rst
