[metadata]
    name = django_cityloc_pkg_sujinhd
    version = 0.0.1
    description = A Django app about city locations
    author = Author name
    author_email = authoremail@example.com
    classifiers = 
        Environment :: Web Environment
        Framwork :: Django
        Framwork :: Django :: 3.2
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3.9

    [options]
    include_package_data = true
    packages = find:
    python_requires = >= 3.8
    install_requires = 
        Django >= 3.2
    
